spacing now correct

--- a/style.css
+++ b/style.css
@@ -60,10 +60,12 @@ body {
 #currentactscontainer {
     display:flex;
     flex-direction: row;
+    justify-content: space-evenly;
 }
 
 .sigils {
-    width:30%;
+    width: 80%;
+    margin-left: 20%;
 }
 
 .socialsimg {
@@ -79,4 +81,10 @@ body {
 .titleline {
     display:flex;
     flex-direction:row;
+    justify-content: space-between;
+}
+
+.activitydiv {
+    width:30%;
+    padding:1%;
 }
